# Screeps-Arena

./: .gitignore  AGENTS.md  README.md  cli_upload.js  emergency_upload.js  package.json  update_script.js  upload_full.js  upload_python.py
agents/screeps-agent/: AGENTS.md  GEMINI_INCOMPATIBILITY_REPORT.md  README.md  config.example.yaml  config.yaml  pyproject.toml  screeps_pvp_battle_complete_record.md  terrain.json
agents/screeps-agent/docker/: Dockerfile  sandbox.py
agents/screeps-agent/scripts/: query_logs.py  report.py  run_all_agents.py  run_commentator.py  test_commentator.py
agents/screeps-agent/src/screeps_agent/: __init__.py  agent.py  commentator.py  config.py  main.py  multi_agent.py  observability.py  runner.py  screeps_client.py
agents/screeps-agent/tests/: __init__.py  conftest.py  test_screeps_client.py
agents/screeps-agent/workspace copy/claude/: FINAL_EXTINCTION_ULTIMATE_STATUS.md  OMEGA_EXTINCTION_FINAL_STATUS.md  PvP_DEPLOYMENT_STATUS.md  aggressive_pvp.js  check_game.js  emergency_deployment.js  emergency_strategy.md  final_battle_plan.md  final_battle_status.md  final_upload.js  final_war_status.md  logs.jsonl  main.js  main_backup.js  main_v2.js  main_v3_ultra.js  minimal_code.json  monitor.js  simple_upload.sh  ultra_simple.js  update_code.js  upload_container.js  upload_final.js  war_room_status.md
agents/screeps-agent/workspace copy/commentator/: game_commentary.md
agents/screeps-agent/workspace copy/gemini/: ABSOLUTE_FINAL_ULTIMATE_EMERGENCY_BATTLE_REPORT.md  BATTLE_REPORT_CURRENT_DEPLOYMENT.md  BATTLE_REPORT_V7_DEPLOYED.md  (+20 more)
(+264 files in other folders)
